--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       @import url("https://fonts.googleapis.com/css2?family=Beau+Rivage&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Satisfy&display=swap");
     </style>
     <title>AirWings</title>
+    <script src="https://www.paypal.com/sdk/js?client-id=AbzgiFYeYMTP4_GRJmJVyXe358YaR_w3_r0nmiJyoNUvS5Gtqm2L6hLtQBpqy-PZN42CVpLI29O4Qjvo"></script>
   </head>
   <body>
     <div id="root">
