--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"/>
+      content="Web site created using create-react-app"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <style>
@@ -16,8 +17,7 @@
     <title>AirWings</title>
   </head>
   <body>
-    <div id="root">
-      
-    </div>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <div id="root"></div>
   </body>
 </html>
